Bug 429491 - Newly created institution is not displayed in institutions view
Summary: Newly created institution is not displayed in institutions view
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.1.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-22 08:48 UTC by Thomas Baumgart
Modified: 2020-11-22 09:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.1
Sentry Crash Report:


Attachments
Demofile showing the problem (726 bytes, application/x-kmymoney)
2020-11-22 08:48 UTC, Thomas Baumgart
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2020-11-22 08:48:35 UTC
Created attachment 133549 [details]
Demofile showing the problem

STEPS TO REPRODUCE
1. Open attached file
2. Select institutions view

OBSERVED RESULT
Institution 'test' is not visible

EXPECTED RESULT
Institution 'test' is visible

ADDITIONAL INFORMATION
Creating an account allows to select the institution. Once the institution has a link to an account it shows up in the institutions view.
Comment 1 Thomas Baumgart 2020-11-22 09:22:40 UTC
Apparently, this only happens when the "Don't show closed accounts" option is active.
Comment 2 Thomas Baumgart 2020-11-22 09:25:41 UTC
Git commit e702ae9e30ff0ce54d1d401a281898396eecabb6 by Thomas Baumgart.
Committed on 22/11/2020 at 09:25.
Pushed by tbaumgart into branch '5.1'.

Don't hide institutions when "Hide closed accounts" option is active
FIXED-IN: 5.1.1

M  +1    -2    kmymoney/models/accountsproxymodel.cpp

https://invent.kde.org/office/kmymoney/commit/e702ae9e30ff0ce54d1d401a281898396eecabb6