Don't hide institutions when "Hide closed accounts" option is active

BUG: 429491
FIXED-IN: 5.1.1